Bug 1331390 - Don't over scroll when mouse down on scrollbar if smooth scroll is enabled. r=botond

Differential Revision: https://phabricator.services.mozilla.com/D171017